--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,3 +1,9 @@
+/************ PAGE RESET **********************/
+
+
+
+
+
 *{
     margin:0;
     padding: 0;
@@ -7,6 +13,7 @@ html, body {
   max-width: 100%;
   height: auto;
   overflow: hidden;
+  font-family: Tahoma, Verdana, Segoe, sans-serif;
 }
 
 /******************NAV BAR ************/
@@ -57,20 +64,18 @@ li a:hover {
 }
 
 .text {
+    width: 100%;
+    height: 120px;
     font-weight: 900;
-    color: #fff;
     font-size: 100px;
-    width: 553px;
-    height: 100px;
+    color: white;
 }
 
 .text_1{
     position: absolute;
     left: 50%;
-    margin-left: -400px;
+    margin-left: -300px;
     top: -200px;
-    background: url('../img/8es.png') center center no-repeat;
-
 }
 
 .text_2{
@@ -78,16 +83,13 @@ li a:hover {
     left: 50%;
     margin-left: -2070px;
     top: 245px;
-    background: url('../img/na_pas.png') center center no-repeat;
 }
 
 .text_3{
     position: absolute;
-    right: 50%;
-    margin-right:-200px;
+    left: 50%;
+    margin-left:-390px;
     top: 390px;
-    background: url('../img/diakopes.png') center center no-repeat;
-    width: 610px;
     opacity: 0;
 }
 
@@ -614,4 +616,164 @@ input:required, textarea:required {
 #contact-form .required {  
    font-weight:bold;  
    color: #E5E6E7;      
+}
+
+/*********************MEDIA QUERIES**************/
+
+
+@media only screen and (max-width: 1300px) {
+
+    .text {
+        font-size: 80px;
+    }
+
+    .text_1{
+        margin-left: -200px;
+        top: -200px;
+
+    }
+
+    .text_2{
+        margin-left: -2070px;
+        top: 235px;
+    }
+
+    .text_3{
+        margin-left:-300px;
+        top: 340px;
+        opacity: 0;
+    }
+
+    footer{
+        height: 50px;
+        bottom: 0;
+    }
+
+    .footer {
+      padding: 8px 0;
+    }
+    .footer a {
+      font-size: 25px;
+      padding: 8px;
+    }
+}
+
+@media only screen and (max-width: 1000px) {
+
+    .text {
+        font-size: 60px;
+        -webkit-text-stroke: 1px #000;
+    }
+
+    .text_1{
+        margin-left: -180px;
+        top: -200px;
+
+    }
+
+    .text_2{
+        margin-left: -2070px;
+        top: 205px;
+    }
+
+    .text_3{
+        margin-left: -270px;
+        top: 290px;
+        opacity: 0;
+    }
+
+/********FOOTER CSS ***************/
+    footer{
+        position: absolute;
+        width: 100%;
+        height: 50px;
+        bottom: 0;
+    }
+
+    .footer {
+      padding: 8px 0;
+    }
+    .footer a {
+      font-size: 25px;
+      padding: 8px;
+    }
+}
+
+@media only screen and (max-width: 660px) {
+
+    li {
+        font-size: 15px;
+    }
+
+    li a {
+        padding: 3px 5px;
+        text-shadow: 2px 2px #000;
+
+    }
+
+    .text {
+        font-size: 60px;
+        -webkit-text-stroke: 1px #000;
+    }
+
+    .text_1{
+        left: 50%;
+        margin-left: -140px;
+        top: -200px;
+
+    }
+
+    .text_2{
+        margin-left: -2070px;
+        top: 205px;
+    }
+
+    .text_3{
+        margin-left: -180px;
+        top: 280px;
+    }
+
+    .footer {
+      padding: 8px 0;
+    }
+    .footer a {
+      font-size: 25px;
+      padding: 8px;
+    }
+}
+
+@media only screen and (max-width: 420px) {
+
+    li {
+        font-size: 10px;
+    }
+
+    li a {
+        padding: 3px 5px;
+    }
+    .text {
+        font-size: 60px;
+    }
+
+    .text_1{
+        margin-left: -140px;
+        top: -200px;
+    }
+    .text_2{
+        margin-left: -2070px;
+        top: 205px;
+    }
+
+    .text_3{
+        margin-left: -180px;
+        top: 280px;
+    }
+
+    .footer {
+      padding: 8px 0;
+    }
+    .footer a {
+      font-size: 25px;
+      padding: 8px;
+    }
 }
