--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -225,21 +225,20 @@ h1{
     background-color: transparent;
     position: relative;
     left: 50%;
+    margin-left: -350px;
+    opacity: 0;
 }
 
 .prwto {
     top:100px;
-    margin-left: -2000px;
 }
 
 .deutero {
     top:100px;
-    margin-left: -2000px;
 }
 
 .trito {
     top:100px;
-    margin-left: -2000px;
 }
 
 .info{
@@ -694,7 +693,7 @@ input:required, textarea:required {
 /*********************MEDIA QUERIES**************/
 
 
-@media only screen and (max-width: 1300px) {
+@media only screen and (max-width: 1400px) {
 
     .text {
         font-size: 80px;
@@ -729,6 +728,34 @@ input:required, textarea:required {
       font-size: 25px;
       padding: 8px;
     }
+
+    h1 {
+    text-shadow: 2px 2px #000;
+    font-size: 50px;
+    margin-left: -500px;
+    top: 60px;
+    }
+
+    .info{
+    font-size: 18px;
+    }
+
+    .keimeno {
+    width: 700px;
+    height: 180px;
+    }
+    .prwto {
+        top:90px;
+    }
+
+    .deutero {
+        top:50px;
+    }
+
+    .trito {
+        top:30px;
+    }
+
 }
 
 @media only screen and (max-width: 1000px) {
@@ -766,9 +793,34 @@ input:required, textarea:required {
       font-size: 25px;
       padding: 8px;
     }
+    h1 {
+    font-size: 40px;
+    margin-left:-345px;
+    top: 70px;
+    }
+    .info{
+    font-size: 15px;
+    text-shadow: 2px 2px #001;
+    }
+    .keimeno {
+    width: 700px;
+    height: 200px;
+    left: 50%;
+    }
+    .prwto {
+        top:100px;
+    }
+
+    .deutero {
+        top:0;
+    }
+
+    .trito {
+        top:-80px;
+    }
 }
 
-@media only screen and (max-width: 660px) {
+@media only screen and (max-width: 790px) {
 
     li {
         font-size: 15px;
@@ -808,6 +860,32 @@ input:required, textarea:required {
       font-size: 25px;
       padding: 8px;
     }
+    h1 {
+    font-size: 30px;
+    margin-left: -383px;
+    top: 60px;
+    width: 100%;
+    }
+    .info{
+    font-size: 13px;
+    text-shadow: 2px 2px #001;
+    }
+    .keimeno {
+    width: 600px;
+    height: 200px;
+    }
+    .prwto {
+        top:80px;
+        margin-left: -300px;
+    }
+    .deutero {
+        top:-30px;
+        margin-left: -300px;
+    }
+    .trito {
+        top:-120px;
+        margin-left: -300px;
+    }
 }
 
 @media only screen and (max-width: 420px) and (orientation: portrait) {
@@ -844,6 +922,31 @@ input:required, textarea:required {
       font-size: 25px;
       padding: 8px;
     }
+    h1 {
+    font-size: 18px;
+    margin-left: -140px;
+    top: 50px;
+    }
+    .info{
+    font-size: 13px;
+    text-shadow: 2px 2px #001;
+    }
+    .keimeno {
+    width: 400px;
+    height: 150px;
+    }
+    .prwto {
+        top:80px;
+        margin-left: -200px;
+    }
+    .deutero {
+        top:60px;
+        margin-left: -200px;
+    }
+    .trito {
+        top:45px;
+        margin-left: -200px;
+    }
 }
 
 @media only screen and (max-width: 640px) and (orientation: landscape) {
@@ -858,9 +961,7 @@ input:required, textarea:required {
     .text {
         font-size: 40px;
     -webkit-text-stroke: 1px #000;
-
     }
-
     .text_1{
         margin-left: -140px;
         top: -200px;
@@ -882,9 +983,34 @@ input:required, textarea:required {
       font-size: 25px;
       padding: 8px;
     }
+    h1 {
+    font-size: 20px;
+    margin-left: -320px;
+    top: 40px;
+    }
+    .info{
+    font-size: 13px;
+    text-shadow: 2px 2px #001;
+    }
+    .keimeno {
+    width: 500px;
+    height: 150px;
+    }
+    .prwto {
+        top:50px;
+        margin-left: -250px;
+    }
+    .deutero {
+        top:-10px;
+        margin-left: -250px;
+    }
+    .trito {
+        top:-55px;
+        margin-left: -250px;
+    }
 }
 
-@media only screen and (max-width: 660px) {
+@media only screen and (max-width: 360px) and (orientation: portrait) {
     li {
         font-size: 10px;
     }
@@ -916,5 +1042,30 @@ input:required, textarea:required {
     .footer a {
       font-size: 25px;
       padding: 8px;
+    }
+    h1 {
+    font-size: 16px;
+    margin-left: -70px;
+    top: 50px;
+    }
+    .info{
+    font-size: 12px;
+    text-shadow: 2px 2px #001;
+    }
+    .keimeno {
+    width: 300px;
+    height: 170px;
+    }
+    .prwto {
+        top:70px;
+        margin-left: -150px;
+    }
+    .deutero {
+        top:50px;
+        margin-left: -150px;
+    }
+    .trito {
+        top:45px;
+        margin-left: -150px;
     }
 }
